--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,10 @@
   </div>
 </nav>
 
-<div class="container">
-    <app-tasks-list></app-tasks-list>
+<div class="container my-4">
+  <div class="row">
+    <div class="col-sm-8 mx-auto">
+      <app-tasks-list></app-tasks-list>
+    </div>
+  </div>
 </div>
