--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,8 @@
 <div class="container my-4">
   <div class="row">
     <div class="col-sm-8 mx-auto">
-      <app-tasks-list></app-tasks-list>
+      <router-outlet></router-outlet>
+      <!-- <app-tasks-list></app-tasks-list> -->
     </div>
   </div>
 </div>
