--- a/src/app/tasks-list/tasks-list.component.html
+++ b/src/app/tasks-list/tasks-list.component.html
@@ -9,13 +9,7 @@
   </div>
   <ul class="list-group list-group-flush">
     <li class="list-group-item" *ngFor="let task of tasks" >
-        <div class="form-check form-check-inline">
-          <input [(ngModel)]="task.done" type="checkbox" class="form-check-input" id="task-{{ task.id }}" >
-          <label class="form-check-label" [ngClass]="{ done: task.done }" for="task-{{ task.id }}">
-            {{ task.description }}
-          </label>
-        </div>
-        <a *ngIf="task.hasFile" [href]="getAttachmentUrl(task.id)" class="btn btn-dark float-right"> Download File </a>
+        <app-task [task]="task"></app-task>
     </li>
   </ul>
 </div>
