--- a/src/app/tasks-list/task/task.component.html
+++ b/src/app/tasks-list/task/task.component.html
@@ -4,4 +4,4 @@
     {{ task.description }}
   </label>
 </div>
-<a *ngIf="task.hasFile" [href]="getAttachmentUrl(task.id)" class="btn btn-ouline-dark float-right"> Download File </a>
+<a *ngIf="task.hasFile" [href]="getAttachmentUrl(task.id)" class="btn btn-outline-dark float-right"> Download File </a>
