add task-form component

--- a/src/app/tasks-list/tasks-list.component.html
+++ b/src/app/tasks-list/tasks-list.component.html
@@ -1,11 +1,6 @@
 <div class="card">
   <div class="card-header">
-    <div class="input-group mb-3">
-      <div class="input-group-prepend">
-        <span class="input-group-text" id="basic-addon1">Filter</span>
-      </div>
-      <input type="text" class="form-control" aria-describedby="filter">
-    </div>
+    <app-task-form (newTaskEvent)="addNewTask($event)" ></app-task-form>
   </div>
   <ul class="list-group list-group-flush">
     <li class="list-group-item" *ngFor="let task of tasks" >
