--- a/src/app/tasks-list/task/task.component.css
+++ b/src/app/tasks-list/task/task.component.css
@@ -1,3 +1,21 @@
-.done {
+.done > div {
   text-decoration: line-through;
+}
+
+input ~ .form-check-label > .custom-checkbox::before {
+  font-family: 'Source Sans Pro', sans-serif, Arial;
+  font-style: normal;
+  font-weight: 1000;
+  font-size: 1.5rem;
+  text-decoration: none;
+  content: "\2610";
+}
+
+input:checked ~ .form-check-label > .custom-checkbox::before {
+  font-family: 'Source Sans Pro', sans-serif, Arial;
+  font-style: normal;
+  font-weight: 1000;
+  font-size: 1.5rem;
+  text-decoration: none;
+  content: "\2611";
 }
